--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
       android:theme="@style/AppTheme">
       <meta-data
       android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyCR1juEVh0dxYMHhKkTwM5ek-4EcfDgbw4"/>
+      android:value="*************(Your own key)************"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
